# pn-tda

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: DESIGN.md  IMPLEMENTATION.md
examples/daynotes_verification/: README.md  sprint_evolution.py
examples/obsidian_local_verification/: README.md  demo.py  sprint_evolution.py
examples/ontology_enriched_tda/: README.md  demo.py
examples/pn_autoresearch_integration/: README.md  demo.py  evaluate.py  experiment.py  experiment_tda.yml  queries.jsonl  tda_scorer.py
examples/pn_daynotes_verification/: README.md  cache.py  run_verification.py
src/pn_tda/: __init__.py
src/pn_tda/adapters/: base.py  obsidian_refs.py  signal_db.py
src/pn_tda/core/: filtration.py  graph.py  persistence.py  simplex_tree.py
src/pn_tda/features/: betti.py  maturity.py  persistence.py
src/pn_tda/utils/: geometry.py  heading_graph.py  ontology.py
tests/: conftest.py  test_adapter_pipeline.py  test_betti_extractor.py  test_maturity_scorer.py  test_ndcg_experiment.py  test_obsidian_refs_adapter.py  test_persistence_extractor.py  test_signal_db_adapter.py  test_tda_scorer.py
tests/real_corpus/: conftest.py  test_feature_pipeline.py  test_sprint_26033.py  test_sprint_26034.py
tests/synthetic/: test_circle.py  test_torus.py  test_two_circles.py
